--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header, footer {
 
 header {
     height: 150px;
+    background-image: url(../img/310582_10150298576507232_4175852_n.jpg);
 }
 
 header h1 {
