--- a/css/carosel.css
+++ b/css/carosel.css
@@ -1,4 +1,4 @@
-.carousel {
+.Carousel {
     position: relative;
     width: 500px;
     height: 250px;
@@ -25,7 +25,7 @@
     height: 250px;
 }
 
-.carousel nav {
+.Carousel nav {
     position: absolute;
     z-index: 2;
     width: 500px;
@@ -33,7 +33,7 @@
     line-height: 200px;
 }
 
-.carousel nav a {
+.Carousel nav a {
     text-decoration: none;
     color: #FFF;
     font-weight: bold;
@@ -50,15 +50,15 @@
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.carousel nav a:first-child {
+.Carousel nav a:first-child {
     float: left;
 }
 
-.carousel nav a:last-child {
+.Carousel nav a:last-child {
     float: right;
 }
 
-.carousel-caption {
+.Carousel-caption {
     position: absolute;
     z-index: 3;
     bottom: 0;
