--- a/css/carosel.css
+++ b/css/carosel.css
@@ -1,4 +1,4 @@
-.Carousel {
+.labCarousel {
     position: relative;
     width: 500px;
     height: 250px;
@@ -25,7 +25,7 @@
     height: 250px;
 }
 
-.Carousel nav {
+.labCarousel nav {
     position: absolute;
     z-index: 2;
     width: 500px;
@@ -33,7 +33,7 @@
     line-height: 200px;
 }
 
-.Carousel nav a {
+.labCarousel nav a {
     text-decoration: none;
     color: #FFF;
     font-weight: bold;
@@ -44,21 +44,21 @@
     background-color: rgba(0,0,0,0);
 }
 
-.carousel nav:hover a {
+.labCarousel nav:hover a {
     transition: all .25s ease;
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.15);
 }
 
-.Carousel nav a:first-child {
+.labCarousel nav a:first-child {
     float: left;
 }
 
-.Carousel nav a:last-child {
+.labCarousel nav a:last-child {
     float: right;
 }
 
-.Carousel-caption {
+.labCarousel-caption {
     position: absolute;
     z-index: 3;
     bottom: 0;
