--- a/css/style.css
+++ b/css/style.css
@@ -96,46 +96,67 @@ footer {
 
 
 /* #084D08, #280F99, #009900, #994C04, #4D2404 */
+/*
 .row {
     display: block;
     width: 100%;
     background-color: #994C04;
     text-align: center;
 }
+*/
 
 .row div {
+    /*
     display: inline-block;
     text-align: center;
     margin: 10px;
-/*    height: 100px;    */
     background-color: #084D08;
+    */
+    /*    height: 100px;    */
 }
 
 /* IMAGE GALLERY */
 .galleryFrame {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
     width: 100%;
     background-color: #994C04;
     text-align: center;
 }
+
 .galleryRow {
+    display: flex;
     flex-flow: row nowrap;
+    justify-content: space-evenly;
+    
+    /*background-color: violet;*/
+    margin: 10px 0;
+    /*
     justify-content: space-evenly;
     align-items: center;
 
     padding: 10px;
+    */
     /* flex: flex-grow flex-shrink flex-basis */
-    /* flex: 1 100%; */   /* all items same size, and 100% width */
+    /* flex: 1 0px; */    /* all items same size, and 100% width */
     
 }
 
 .galleryRow div {
-    flex: 1 0px;
+    /*flex-flow: row nowrap;*/
+    background-color: #4D2404;
+    flex: 0 30%;
+    display: flex;
+    align-items: center;
 }
 
+
 .galleryRow img {
-    width: 100%
+    /* width: 100%; */
+    background-color: tomato;
+    /* margin: 10px; */
+    width: 100%;
 }
 
 /*
