--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body {
     height: 100%;
 /*    display: flex;    */
     justify-content: center;
-    font-family: sans-serif;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 }
 
 /* color schemes 
