--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ header, footer {
 
 header {
     height: 150px;
-    background-image: url(../img/310582_10150298576507232_4175852_n.jpg);
+    /*background-image: url(../img/310582_10150298576507232_4175852_n.jpg);*/
+    background-image: url(../img/background.png);
     background-position: center;
     background-size: 10%;
 }
