--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
     background-image: url(../img/background.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 10%;
+    background-size: cover;
 }
 
 header h1 {
