--- a/version2/css/style.css
+++ b/version2/css/style.css
@@ -53,6 +53,8 @@ header h1 {
     margin: 0px;
     line-height: 150px;
 }
+
+/* navigation elements */
 header nav {
     margin: 0px;
     line-height: 50px;
@@ -63,10 +65,14 @@ header nav ul {
     margin: 0px;
     padding: 0px;
     list-style-type: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
 header nav ul li {
-    display: inline-block;
+    flex: 1;
 }
 
 header nav a {
