--- a/band/css/carousel.css
+++ b/band/css/carousel.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    background-color: #red;
+    background-color: #FF0000;
     color: white;
     font-weight: bold;
     text-align: center;
