--- a/band/css/gallery.css
+++ b/band/css/gallery.css
@@ -31,7 +31,11 @@
 
 .galleryRow div:hover {
     background-color: #FFFFFF;
+    color: #000000;
     cursor: pointer;
+}
+.button:active {
+    background-color: #FF0000;
 }
 
 /* img tag */
