--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -48,6 +48,7 @@ header h1 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Batala, Ariel';
 }
 
 /* navigation elements */
