--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -15,7 +15,7 @@ html, body {
 
 @font-face {
     font-family: 'Batala';
-    src: url("assets/Batala.ttf");
+    src: url("../assets/Batala.ttf");
 }
 .batala {
     font-family: 'Batala';
