--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     justify-content: center;
     font-family: 'Roboto', 'PT Sans', 'Montserrat', Helvetica, Arial, sans-serif;
+    font-size: 1em;
 }
 
 /* color schemes 
@@ -147,6 +148,13 @@ footer p .linkedIn {
 /* END HEADER, NAV MENU AND FOOTER */
 
 /* CONTENT */
+section header {
+    line-height: 40px;
+    width: 99%;
+    padding-left: 1%;
+    text-align: left;
+    background-color: red;
+}
 .section1 {
     background-color: rgba(0, 153, 0, 0.1); 
     
