--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -47,11 +47,13 @@ img.logo {
 	height:auto;
 	max-width:120px;
 	padding:10px;
+	display: inline-block;
 }
 
 header h1 {
     margin: 0px;
     line-height: 150px;
+	display: inline-block;
 
     /*
     background-image: url(../img/background.png);
