--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -98,11 +98,11 @@ header nav a {
 }
 
 header nav a.this-page {
-    background-color: #ff5050;
-    //color: white;
+    background-color: #ff0000;
+    color: black;
 }
 header nav a:hover {
-    //background-color: #00E600;
+    background-color: #FF8080;
     color: black;
 }
 
@@ -115,7 +115,7 @@ header nav a:active {
 }
 
 footer {
-    height: 100px;
+    min-height: 100px;
     margin-top: 20px;
     background-color: red;
 }
