--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -128,8 +128,8 @@ footer {
 }
 
 .footer_fb {background-color: blue; order: 1; flex: 1 0; }
-.footer_siteInfo {background-color: yellow; order: 2; flex: 8 0 10%; }
-.footer_siteInfo .bandInfo {padding-left: 10px; text-align: left; flex: 1 0 10%; }
+.footer_siteInfo {background-color: orange; order: 2; flex: 8 0 10%; }
+//.footer_siteInfo .bandInfo {padding-left: 10px; text-align: left; flex: 1 0 10%; }
 .footer_twitter {background-color: green; order: 3; flex: 1 0; }
 
 /*
