--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -42,6 +42,9 @@ header, footer {
     text-align: center;
 }
 
+//flex shrink (what if the items are bigger than the container): 0-remain outside container; 1-shrinks to space; 2-item takes half space as item with 1.
+//flex grow (what if items are smaller than container): 0-remains size of content; 1-grows to take 1 space; 2-takes up twice space of 1.
+//flex basis (size of content box): 
 header_wrapper {
 	display: flex;
 	flex-flow: row nowrap;
