--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -42,7 +42,7 @@ header, footer {
     text-align: center;
 }
 
-header_wrapper {
+.header_wrapper {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
