--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -54,13 +54,16 @@ header, footer {
 	margin: 0px;
 }
 
-img.logo {
+.logo {
     background-color: blue; order: 1; flex: 0 1 200px; 
-	vertical-align: middle;
 	height: auto;
+	padding: 10px;
+}
+
+.logo img {
+	vertical-align: middle;
 	max-width: 100px;
 	max-height: 100px;
-	padding: 10px;
 }
 
 header h1 {
