--- a/band/css/layout.css
+++ b/band/css/layout.css
@@ -97,6 +97,7 @@ header nav ul {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+	align-items: stretch;
 }
 
 header nav ul li {
